# cmakerepo

./: .gitmodules  cmake_all.sh
rectangle_project/: CMakeLists.txt
rectangle_project/include/: rectangle.h
rectangle_project/src/: rectangle.cpp
